<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detailsBckgroundColor"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_container_day_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="22dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/id_ico_weather_day_1"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_wi_day_sunny"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/id_date_day_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/forecastMondayTxt"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/id_ico_weather_day_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_weather_desc_day_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/weatherDesc"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/id_date_day_1"
            app:layout_constraintStart_toEndOf="@+id/id_ico_weather_day_1" />

        <TextView
            android:id="@+id/id_temp_max_day_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/temperatureMax"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_temp_min_day_1"
            app:layout_constraintStart_toEndOf="@+id/id_date_day_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_temp_min_day_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/temperatureMin"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>